--- a/index.html
+++ b/index.html
@@ -153,31 +153,120 @@ QUAIFICATION REQUIRES TO BECOME DEVELOPER :
 </head>
 <h4>WEB DEVELOPERS FORM</h4>
 <body>
-    <div class="form-container"></div>
-        
-        <fieldset>
-        <form action="#" method="POST">
-            <label for="name">Full Name</label>
-            <input type="text" id="name" name="name" required><br><br>
+   <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Go to Next Page Button</title>
+  <style>
+    body {
+      background: #1e1e2f;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+    }
 
-            <label for="email">Email Address</label><br>
-            <input type="email" id="email" name="email" required><bn><br>
+    .next-button {
+      position: relative;
+      padding: 16px 48px;
+      font-size: 18px;
+      color: #fff;
+      background: linear-gradient(135deg, #6e8efb, #a777e3);
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    }
 
-            <label for="portfolio">Portfolio URL</label><br>
-            <input type="url" id="portfolio" name="portfolio"><br><br>
+    .next-button:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.3);
+    }
 
-            <label for="skills">Skills (comma-separated)</label>
-            <input type="text" id="skills" name="skills" placeholder="e.g. HTML, CSS, JavaScript"><br><br>
+    .next-button span {
+      position: relative;
+      z-index: 2;
+    }
 
-            <label for="bio">Short Bio</label>
-            <textarea id="bio" name="bio" rows="5" placeholder="Tell us a bit about yourself..."></textarea><br><br>
+    .arrow {
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 20px;
+      height: 20px;
+    }
 
-            <button onclick="window.location.href='PAGE2.HTML'">submit</button>
+    .arrow::before, .arrow::after {
+      content: '';
+      position: absolute;
+      background: #fff;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
 
-        </form><BR>
-        </fieldset>
-    </div>
-    </body>
+    .arrow::before {
+      width: 12px;
+      height: 2px;
+      top: 9px;
+      left: 0;
+    }
+
+    .arrow::after {
+      width: 8px;
+      height: 8px;
+      border-top: 2px solid #fff;
+      border-right: 2px solid #fff;
+      transform: rotate(45deg);
+      top: 5px;
+      left: 10px;
+    }
+
+    .next-button:hover .arrow::before {
+      width: 16px;
+    }
+
+    /* Glowing pulse animation */
+    .pulse-ring {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 40px;
+      height: 40px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 50%;
+      animation: pulse 1.8s infinite ease-in-out;
+      z-index: 1;
+    }
+
+    @keyframes pulse {
+      0% {
+        transform: translateY(-50%) scale(1);
+        opacity: 0.8;
+      }
+      50% {
+        transform: translateY(-50%) scale(1.3);
+        opacity: 0.4;
+      }
+      100% {
+        transform: translateY(-50%) scale(1);
+        opacity: 0.8;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <button class="next-button" onclick="window.location.href='nextpage.html'">
+    <span>Go to Next Page</span>
+    <div class="pulse-ring"></div>
+ 
     <script>
       document.getElementById('myForm').addEventListener('input', function() {
   // Get all the input fields
